[package]
name = "mdbook-althtml"
version = "0.0.1"
authors = ["rnitta <attinyes@gmail.com>"]
edition = "2018"

[dependencies]
mdbook = "0.2.3"
handlebars = { version = "1.0", default-features = false, features = ["no_dir_source"] }
lazy_static = "1.0"
pulldown-cmark = "0.1.2"
regex = "1.0.0"
elasticlunr-rs = { version = "2.3", optional = true, default-features = false }
error-chain = "0.12"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5.1"


